HREPTWO-1906: Move PasswordHelper to connector package and don't use sun classes
svn path=/hippo-ecm/trunk/; revision=14805